--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://catelle.github.io/sykoti-app-fornt",
+  "homepage":"https://catelle.github.io/sykoti-app",
   "name": "sykoti-app-front",
   "private": true,
   "version": "0.0.0",
